statefulset/ingress-nginx-sts.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-sts-ingress
  namespace: sts-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /nginx-sts
        backend:
          serviceName: nginx
          servicePort: 80
